hphp/test/zend/good/ext/xmlwriter/tests/009.php.skipif
<?php 
if (!extension_loaded("xmlwriter")) die("skip"); 
if (!function_exists("xmlwriter_start_comment")) die("skip: libxml2 2.6.7+ required");
?>