hphp/test/zend/bad/ext/phar/tests/phar_metadata_writeU.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (version_compare(PHP_VERSION, "6.0", "<")) die("skip Unicode support required");
?>